Modificacion de entidad Asistencia y AsistenciaDto, correcion del calculo porcentaje mapeo completo de asistencias consultas agregadas